objects/FINS_INS_Product_Insurance_Coverage__c.object
<CustomObject>
    <description>Junctiuon object between products and what coverages they have for comparison quote flow.</description>
    <fields>
        <fullName>Coverage_Name__c</fullName>
        <formula>Product_Coverage__r.Comparison_Text__c   &amp; &apos; - &apos;  &amp;  TEXT( Product_Coverage__r.Coverage_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPolicyCoverage__c</fullName>
        <formula>TEXT(Product_Coverage__r.Coverage_Type__c) == &quot;Policy Coverage&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Coverage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Coverage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Coverage</label>
        <referenceTo>FINS_Insurance_Product_Coverage__c</referenceTo>
        <relationshipLabel>Insurance Coverages</relationshipLabel>
        <relationshipName>Insurance_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Insurance Coverages</relationshipLabel>
        <relationshipName>Insurance_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Insurance Coverage</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>